--- a/submit-gcloud.sh.template
+++ b/submit-gcloud.sh.template
@@ -37,7 +37,7 @@ PARTITIONS=##spark.sql.shuffle.partitions=4000
 PROPERTIES="^##^spark.jars.packages=org.rogach:scallop_2.11:latest.integration$PARTITIONS$MAXRES$OVERHEAD$EXECMEM"
 
 exec gcloud --verbosity=info  dataproc jobs submit spark --region $REGION --cluster $CLUSTER \
-  --class discount.spark.Discount --jars target/scala-2.11/discount_2.11-1.0.0-SNAPSHOT.jar,lib/fastdoop-1.0.0.jar \
+  --class discount.spark.Discount --jars target/scala-2.11/discount_2.11-1.0.0.jar,lib/fastdoop-1.0.0.jar \
   --properties $PROPERTIES -- "$@"
 
 
