--- a/spark-submit.sh.template
+++ b/spark-submit.sh.template
@@ -11,9 +11,14 @@ SPARK=/path/to/spark-2.4.X-bin-hadoopX.X
 #PARTITIONS="spark.sql.shuffle.partitions=4000"
 PARTITIONS="spark.sql.shuffle.partitions=400"
 
+#Max size of input splits in bytes. A smaller number reduces memory usage but increases the number of 
+#partitions for the first stage. If this variable is unset, Spark's default of 128 MB will be used.
+SPLIT="spark.hadoop.mapreduce.input.fileinputformat.split.maxsize=$((16 * 1024 * 1024))"
+
 exec $SPARK/bin/spark-submit \
   --conf spark.driver.maxResultSize=2g \
   --conf $PARTITIONS \
+  --conf $SPLIT \
   --packages org.rogach:scallop_2.11:latest.integration \
   --jars lib/fastdoop-1.0.0.jar \
   --master $MASTER \
