--- a/submit-gcloud.sh.template
+++ b/submit-gcloud.sh.template
@@ -14,11 +14,12 @@ MAXRES=##spark.driver.maxResultSize=2g
 #High memory
 PARTITIONS=##spark.sql.shuffle.partitions=4000
 #Low memory
-#PARTITIONS=##spark.sql.shuffle.partitions=12000
+#PARTITIONS=##spark.sql.shuffle.partitions=14000
 
 #Max size of input splits in bytes. A smaller number reduces memory usage but increases the number of
 #partitions for the first stage. If this variable is unset, Spark's default of 128 MB will be used.
-SPLIT=##spark.hadoop.mapreduce.input.fileinputformat.split.maxsize=$((16 * 1024 * 1024))
+SPLIT=##spark.hadoop.mapreduce.input.fileinputformat.split.maxsize=$((64 * 1024 * 1024))
+
 
 #YARN memory is allocated using on GCP using executor memory and memoryOverhead.
 #The number of executors that will be spawned by YARN is (total memory)/(executor memory + memoryOverhead).
@@ -35,12 +36,13 @@ SPLIT=##spark.hadoop.mapreduce.input.fileinputformat.split.maxsize=$((16 * 1024 
 #OVERHEAD=##spark.executor.memoryOverhead=$((11171 + 1117))
 #EXECMEM=##spark.executor.memory=11171m
 
+#Change 2.11 to 2.12 in all three places below if compiling for scala 2.12.
+
 #The special characters at the start make '##' the separator of properties in the list, since the comma sign
 #is needed for spark.jars.packages.
 PROPERTIES="^##^spark.jars.packages=org.rogach:scallop_2.11:latest.integration$PARTITIONS$MAXRES$OVERHEAD$EXECMEM$SPLIT"
 
 exec gcloud --verbosity=info  dataproc jobs submit spark --region $REGION --cluster $CLUSTER \
-  --class discount.spark.Discount --jars target/scala-2.11/discount_2.11-1.0.0.jar,lib/fastdoop-1.0.0.jar \
+  --class discount.spark.Discount --jars target/scala-2.11/discount_2.11-1.1.0.jar,lib/fastdoop-1.0.0.jar \
   --properties $PROPERTIES -- "$@"
-
 
