--- a/submit-aws.sh.template
+++ b/submit-aws.sh.template
@@ -14,8 +14,7 @@ BUCKET=s3://my-bucket/discount
 #Change 2.11 to 2.12 in all four places below if compiling for scala 2.12.
 
 #Copy jars and data files the first time only, after which the following lines can safely be commented out
-aws s3 cp lib/fastdoop-1.0.0.jar $BUCKET/
-aws s3 cp target/scala-2.11/discount_2.11-1.3.0.jar $BUCKET/
+aws s3 cp target/scala-2.11/Discount-assembly-1.3.0.jar $BUCKET/
 for f in PASHA/pasha_all*txt
 do
   aws s3 cp $f $BUCKET/PASHA/
@@ -30,10 +29,9 @@ PARTITIONS=##spark.sql.shuffle.partitions=4000
 #Low memory
 #PARTITIONS=##spark.sql.shuffle.partitions=12000
 
-COMMAND=(--packages org.rogach:scallop_2.11:latest.integration \
-  --conf $SPLIT \
+COMMAND=( --conf $SPLIT \
   --conf $PARTITIONS \
- --jars $BUCKET/fastdoop-1.0.0.jar --class discount.spark.Discount $BUCKET/discount_2.11-1.3.0.jar $*)
+ --class discount.spark.Discount $BUCKET/Discount-assembly-1.3.0.jar $*)
 
 RUNNER_ARGS="spark-submit"
 for PARAM in ${COMMAND[@]}
