--- a/spark-submit.sh.template
+++ b/spark-submit.sh.template
@@ -7,7 +7,7 @@ MASTER=local[*]
 #Full cluster running independently
 #MASTER=spark://localhost:7077
 
-SPARK=/path/to/spark-2.4.X-bin-hadoopX.X
+SPARK=/path/to/spark-x.x.x-hadoop
 
 #To reduce memory usage for big inputs, increase PARTITIONS
 #PARTITIONS="spark.sql.shuffle.partitions=4000"
@@ -15,13 +15,14 @@ PARTITIONS="spark.sql.shuffle.partitions=400"
 
 #Max size of input splits in bytes. A smaller number reduces memory usage but increases the number of 
 #partitions for the first stage. If this variable is unset, Spark's default of 128 MB will be used.
-SPLIT="spark.hadoop.mapreduce.input.fileinputformat.split.maxsize=$((64 * 1024 * 1024))"
+#SPLIT="spark.hadoop.mapreduce.input.fileinputformat.split.maxsize=$((64 * 1024 * 1024))"
+
+#--conf $SPLIT
+#--conf $PARTITIONS
 
 #If using Scala 2.11: Change scala-2.12 to scala-2.11 below.
 #On Windows: Change bin/spark-submit to bin/spark-submit.cmd.
 exec $SPARK/bin/spark-submit \
   --conf spark.driver.maxResultSize=2g \
-  --conf $PARTITIONS \
-  --conf $SPLIT \
   --master $MASTER \
   --class discount.spark.Discount target/scala-2.12/Discount-assembly-1.4.0.jar $*
