--- a/submit-aws.sh.template
+++ b/submit-aws.sh.template
@@ -14,7 +14,7 @@ BUCKET=s3://my-bucket/discount
 #Change 2.12 to 2.11 below if compiling for scala 2.11.
 
 #Copy jars and data files the first time only, after which the following lines can safely be commented out
-aws s3 cp target/scala-2.12/Hypercut-assembly-0.1.0.jar $BUCKET/
+aws s3 cp target/scala-2.12/Discount-assembly-2.1.0-SNAPSHOT.jar $BUCKET/
 
 for f in PASHA/pasha_all*txt
 do
@@ -23,7 +23,7 @@ done
 
 #Max size of input splits in bytes. A smaller number reduces memory usage but increases the number of 
 #partitions for the first stage. If this variable is unset, Spark's default of 128 MB will be used.
-SPLIT="spark.hadoop.mapreduce.input.fileinputformat.split.maxsize=$((16 * 1024 * 1024))"
+SPLIT="spark.hadoop.mapreduce.input.fileinputformat.split.maxsize=$((64 * 1024 * 1024))"
 
 #High memory
 PARTITIONS=##spark.sql.shuffle.partitions=4000
@@ -32,7 +32,7 @@ PARTITIONS=##spark.sql.shuffle.partitions=4000
 
 COMMAND=( --conf $SPLIT \
   --conf $PARTITIONS \
- --class com.jnpersson.discount.spark.Discount $BUCKET/Hypercut-assembly-0.1.0.jar $*)
+ --class com.jnpersson.discount.spark.Discount $BUCKET/Discount-assembly-2.1.0-SNAPSHOT.jar $*)
 
 #Turn off paging for output
 export AWS_PAGER=""
