--- a/spark-submit.sh.template
+++ b/spark-submit.sh.template
@@ -17,12 +17,12 @@ PARTITIONS="spark.sql.shuffle.partitions=400"
 #partitions for the first stage. If this variable is unset, Spark's default of 128 MB will be used.
 #SPLIT="spark.hadoop.mapreduce.input.fileinputformat.split.maxsize=$((64 * 1024 * 1024))"
 
-#--conf $SPLIT
-#--conf $PARTITIONS
-
 #If using Scala 2.11: Change scala-2.12 to scala-2.11 below.
 #On Windows: Change bin/spark-submit to bin/spark-submit.cmd.
+
 exec $SPARK/bin/spark-submit \
   --conf spark.driver.maxResultSize=2g \
+# --conf $SPLIT \
+#--conf $PARTITIONS \
   --master $MASTER \
   --class com.jnpersson.discount.spark.Discount target/scala-2.12/Discount-assembly-2.1.0.jar $*
