--- a/submit-aws.sh.template
+++ b/submit-aws.sh.template
@@ -11,7 +11,7 @@ shift
 #Bucket to store discount jars and data files
 BUCKET=s3://my-bucket/discount
 
-#Change 2.12 to 2.11 below if compiling for scala 2.11.
+#Change 2.11 to 2.12 in each place below if compiling for scala 2.12.
 
 #Copy jars and data files the first time only, after which the following lines can safely be commented out
 aws s3 cp target/scala-2.12/Discount-assembly-2.1.0.jar $BUCKET/
@@ -23,14 +23,17 @@ done
 
 #Max size of input splits in bytes. A smaller number reduces memory usage but increases the number of 
 #partitions for the first stage. If this variable is unset, Spark's default of 128 MB will be used.
-SPLIT="spark.hadoop.mapreduce.input.fileinputformat.split.maxsize=$((64 * 1024 * 1024))"
+#SPLIT="spark.hadoop.mapreduce.input.fileinputformat.split.maxsize=$((64 * 1024 * 1024))"
 
 #High memory
-PARTITIONS=##spark.sql.shuffle.partitions=4000
+#PARTITIONS=##spark.sql.shuffle.partitions=4000
 #Low memory
 #PARTITIONS=##spark.sql.shuffle.partitions=12000
 
-COMMAND=( --conf $SPLIT \
+#To set SPLIT or PARTITIONS, uncomment below.
+#Usually, the default values are fine.
+COMMAND=( \
+  --conf $SPLIT \
   --conf $PARTITIONS \
  --class com.jnpersson.discount.spark.Discount $BUCKET/Discount-assembly-2.1.0.jar $*)
 
