--- a/submit-gcloud.sh.template
+++ b/submit-gcloud.sh.template
@@ -21,9 +21,8 @@ PARTITIONS=
 
 SPLIT=
 #Max size of input splits in bytes. A smaller number reduces memory usage but increases the number of
-#partitions for the first stage. If this variable is unset, Spark's default of 128 MB will be used.
+#partitions for the first stage. If this variable is unset, a reasonable default will be used.
 #SPLIT=##spark.hadoop.mapreduce.input.fileinputformat.split.maxsize=$((64 * 1024 * 1024))
-
 
 #YARN memory is allocated using on GCP using executor memory and memoryOverhead.
 #The number of executors that will be spawned by YARN is (total memory)/(executor memory + memoryOverhead).
@@ -38,10 +37,6 @@ EXECMEM=
 #They also work well for standard 4-core nodes.
 #OVERHEAD=spark.executor.memoryOverhead=768
 #EXECMEM=spark.executor.memory=4352m
-
-#Half memory setting for standard-16 nodes. Artificially inflated overhead to limit #executors
-#OVERHEAD=##spark.executor.memoryOverhead=$((11171 + 1117))
-#EXECMEM=##spark.executor.memory=11171m
 
 #Change 2.12 to 2.11 in each place below if compiling for scala 2.11.
 
