--- a/submit-aws.sh.template
+++ b/submit-aws.sh.template
@@ -14,7 +14,7 @@ BUCKET=s3://my-bucket/discount
 #Change 2.11 to 2.12 in each place below if compiling for scala 2.12.
 
 aws s3 cp target/scala-2.12/Discount-assembly-2.2.1.jar $BUCKET/
-aws s3 sync PASHA $BUCKET/PASHA/
+#aws s3 sync PASHA $BUCKET/PASHA/
 
 #Max size of input splits in bytes. A smaller number reduces memory usage but increases the number of 
 #partitions for the first stage. If this variable is unset, Spark's default of 128 MB will be used.
