Log verbosity: stop hardcoding log level, and instead supply a bundled log4j.properties file with helpful defaults

--- a/spark-submit.sh.template
+++ b/spark-submit.sh.template
@@ -29,6 +29,7 @@ LOCAL_DIR="spark.local.dir=/tmp"
 #--conf $SPLIT
 #--conf $PARTITIONS
 exec $SPARK/bin/spark-submit \
+  --driver-java-options -Dlog4j.configuration=file:log4j.properties \
   --conf spark.driver.maxResultSize=2g \
   --conf $MEMORY \
   --conf $LOCAL_DIR \
