--- a/submit-aws.sh.template
+++ b/submit-aws.sh.template
@@ -11,10 +11,7 @@ shift
 #Bucket to store discount jars and data files
 BUCKET=s3://my-bucket/discount
 
-#Change 2.11 to 2.12 in each place below if compiling for scala 2.12.
-
 aws s3 cp target/scala-2.12/Discount-assembly-2.3.0.jar $BUCKET/
-#aws s3 sync PASHA $BUCKET/PASHA/
 
 #Max size of input splits in bytes. A smaller number reduces memory usage but increases the number of 
 #partitions for the first stage. If this variable is unset, Spark's default of 128 MB will be used.
@@ -26,10 +23,10 @@ aws s3 cp target/scala-2.12/Discount-assembly-2.3.0.jar $BUCKET/
 #PARTITIONS=spark.sql.shuffle.partitions=12000
 
 #To set SPLIT or PARTITIONS, uncomment below.
-#Usually, the default values are fine.
+#For many datasets, the default values are fine.
 COMMAND=( \
-  --conf $SPLIT \
-  --conf $PARTITIONS \
+#  --conf $SPLIT \
+#  --conf $PARTITIONS \
  --class com.jnpersson.discount.spark.Discount $BUCKET/Discount-assembly-2.3.0.jar $*)
 
 #Turn off paging for output
