--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,19 +9,18 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
-            java: 8
-          - os: ubuntu-latest
             java: 11
           - os: windows-latest
             java: 11
     runs-on: ${{ matrix.os }}
     steps:
     - name: Checkout
-      uses: actions/checkout@v1
-    - name: Setup Scala
-      uses: olafurpg/setup-scala@v13
+      uses: actions/checkout@v3
+    - name: Setup Java
+      users: actions/setup-java@v3
       with:
-        java-version: "adopt@1.${{ matrix.java }}"
+        distribution: "adopt"
+        java-version: "${{ matrix.java }}"
     - name: Build and Test
       run: sbt -v -Dfile.encoding=UTF-8 +test
       shell: bash
