--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
     - name: Setup Java
-      users: actions/setup-java@v3
+      uses: actions/setup-java@v3
       with:
         distribution: "adopt"
         java-version: "${{ matrix.java }}"
