--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,10 @@
 name: Build and test
+permissions:
+  contents: read
 on:
   pull_request:
   push:
+  workflow_dispatch:
 jobs:
   test:
     strategy:
@@ -12,17 +15,25 @@ jobs:
             java: 17
           - os: windows-latest
             java: 17
+          - os: macOS-latest
+            java: 17
     runs-on: ${{ matrix.os }}
+    env:
+      JAVA_OPTS: -Xms2048M -Xmx2048M -Xss6M -XX:ReservedCodeCacheSize=256M -Dfile.encoding=UTF-8
+      SPARK_LOCAL_HOSTNAME: localhost
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
     - name: Setup Java
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
-        distribution: "temurin"
+        distribution: temurin
         java-version: "${{ matrix.java }}"
-        cache: "sbt"
+        cache: sbt
+    - uses: sbt/setup-sbt@v1
+      with:
+        sbt-runner-version: 1.9.9
     - name: Build and Test
-      run: sbt -v -Dfile.encoding=UTF-8 +test
+      run: sbt -v +test
       shell: bash
 
